# doip-codec

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  pyproject.toml
src/: bindings.rs  decoder.rs  doip_message.rs  encoder.rs  error.rs  lib.rs
src/doip/: definitions.rs  mod.rs
src/doip/header/: header.rs  mod.rs  version.rs
src/doip/header/payload/: alive_check_request.rs  alive_check_response.rs  diagnostic_message.rs  diagnostic_message_ack.rs  diagnostic_message_nack.rs  entity_status_request.rs  entity_status_response.rs  generic_nack.rs  mod.rs  payload.rs  power_information_request.rs  power_information_response.rs  routing_activation_request.rs  routing_activation_response.rs  vehicle_announcement_message.rs  vehicle_identification_request.rs  vehicle_identification_request_eid.rs  vehicle_identification_request_vin.rs
src/doip/message/: action_code.rs  diagnostic_nack.rs  message.rs  mod.rs  nack_codes.rs  node_type.rs
src/doip_codec/: decoder.rs  encoder.rs  mod.rs
src/doip_message/: header.rs  payload.rs
src/doip_message/header/: payload_type.rs
src/doip_message/payload/: alive_check_request.rs  alive_check_response.rs  diagnostic_message.rs  diagnostic_message_ack.rs  diagnostic_message_nack.rs  entity_status_request.rs  entity_status_response.rs  generic_nack.rs  power_information_request.rs  power_information_response.rs  routing_activation_request.rs  routing_activation_response.rs  vehicle_announcement_message.rs  vehicle_identification_request.rs  vehicle_identification_request_eid.rs  vehicle_identification_request_vin.rs
