[package]
name = "doip-codec"
version = "2.0.6"
authors = ["Samuel Preston <samp.reston@outlook.com>"]
edition = "2021"
description = "Diagnostics over Internet Protocol codec for client-server communication."
readme = "README.md"
repository = "https://github.com/samp-reston/doip-codec"
license = "MIT"
keywords = ["doip", "diagnostics", "vehicle", "codec"]
categories = [
  "simulation",
  "parser-implementations",
  "network-programming",
  "encoding",
]

[profile.dev]
panic = "abort"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[profile.test]
opt-level = 0
debug = true

[dependencies]
derive_more = { version = "2.0.1", features = ["from"] }
doip-definitions = { version = "3.0.11", default-features = false }
heapless = "0.8.0"
pyo3 = { version = "0.24.2", features = [
  "abi3-py311",
  "extension-module",
], optional = true }
tokio = { version = "1.45.0", features = ["net", "io-util"] }
tokio-util = { version = "0.7.15", features = ["codec"] }

[dev-dependencies]
futures = "0.3.31"
doip-definitions = { version = "3.0.7" }

[lib]
name = "doip_codec"
crate-type = ["cdylib", "rlib"]

[features]
default = ["std"]
std = [
  "pyo3",
  "doip-definitions/std",
] # Enable std and pyo3 when building for Python

[package.metadata]
rust-analyzer = { checkOnSave.extraArgs = [
  "--check-cfg",
  "cfg(rust_analyzer)",
] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(rust_analyzer)"] }
