[package]
name = "doip-codec"
version = "2.0.5"
authors = ["Samuel Preston <samp.reston@outlook.com>"]
edition = "2021"
description = "Diagnostics over Internet Protocol codec for client-server communication."
readme = "README.md"
repository = "https://github.com/samp-reston/doip-codec"
license = "MIT"
keywords = ["doip", "diagnostics", "vehicle", "codec"]
categories = [
  "simulation",
  "parser-implementations",
  "network-programming",
  "encoding",
]

[profile.dev]
panic = "abort"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[profile.test]
opt-level = 0
debug = true

[dependencies]
doip-definitions = { git = "https://github.com/theswiftfox/doip-definitions.git", rev = "3c5e543" }
thiserror = { version = "2.0.12" }
tokio = { version = "1.43.0", features = ["net", "io-util"] }
tokio-util = { version = "0.7.13", features = ["codec"] }

[dev-dependencies]
futures = "0.3.31"

[lib]
name = "doip_codec"
