[project]
name = "doip-codec"
version = "2.0.2"
description = "Diagnostics over Internet Protocol codec for client-server communication."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["maturin"]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so)
features = ["pyo3/extension-module"]
